# cnn-exercise

./: .gitignore  CMakeLists.txt
data/lenet/model_data/: conv1_0.txt  conv1_1.txt  conv2_0.txt  conv2_1.txt  ip1_1.txt  ip2_0.txt  ip2_1.txt
data/lenet/test_data/: input_0.txt  input_2.txt  input_3.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
src/: CMakeLists.txt
src/sdk/: CMakeLists.txt
src/sdk/include/: Layer.hpp  ToyCnnDefs.hpp  Types.h
src/sdk/include/layers/: ConvolutionLayer.hpp  InnerProductLayer.hpp  PoolingLayer.hpp  ReluLayer.hpp  SoftMaxLayer.hpp
src/sdk/include/utils/: Dimension.hpp  Matrix.hpp  Types.hpp
src/sdk/source/: Layer.cpp
src/sdk/source/layers/: ConvolutionLayer.cpp  InnerProductLayer.cpp  PoolingLayer.cpp  ReluLayer.cpp  ReluLayer.cu  SoftMaxLayer.cpp  SoftMaxLayer.cu
src/sdk/source/utils/: DataBlock.cpp  DataBlock.hpp  Matrix.cpp
src/tests/: CMakeLists.txt  ConstInputLayer.hpp  ConvolutionLayerTests.cpp  ConvolutionLayerTests.hpp  DimensionTests.cpp  DimensionTests.hpp  InnerProductLayerTests.cpp  InnerProductLayerTests.hpp  LeNetClassification.cpp  LeNetClassification.hpp  MatrixTests.cpp  MatrixTests.hpp  MemoryInputLayer.hpp  PoolingLayerTests.cpp  PoolingLayerTests.hpp  PrintUtils.cpp  PrintUtils.hpp  ReluLayerTests.cpp  ReluLayerTests.hpp  SoftMaxLayerTests.cpp  SoftMaxLayerTests.hpp  TestDriver.cpp
